Fixed alignment of selectsession loader

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ body {
 	justify-content: center;
 	align-items: center;
 	overflow-x: auto;
-	background-color: rgb(220, 220, 220);
+	background-color: rgb(240, 240, 240);
 	
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
