--- a/src/pages/css/SelectSession.css
+++ b/src/pages/css/SelectSession.css
@@ -1,7 +1,6 @@
 
 
 .loader {
-	margin-right: 35px;
 	flex-grow: 1;
 	display: flex;
 	justify-content: center;
